<!--
  ~ Copyright (c) 2021 -Srihari Vishnu - All Rights Reserved
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~ HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  ~ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF
  ~ OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~
  -->

<resources>
    <string name="google_oAuth_client_ID">1007588916864-ui8qdpimhdsauq5irh98qcsuqgvo63o2.apps.googleusercontent.com</string>
    <string name="backend_cloud_function">https://us-central1-gameface-chat.cloudfunctions.net/app/servers</string>
    <string name="backend_cloud_function_call">https://us-central1-gameface-chat.cloudfunctions.net/app/call</string>

    <string name="termsAndConditionsLink">https://www.gamefacechat.com/terms-and-conditions</string>
    <string name="privacyPolicyLink">https://www.gamefacechat.com/privacy-policy</string>
    <string name="website">https://www.gamefacechat.com/</string>
    <string name="aboutUs">https://www.gamefacechat.com/about-us</string>

    <!-- Ads Values-->
    <string name="interstitial_after_calling">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_after_calling">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_earn">ca-app-pub-3940256099942544/6300978111</string>
    <string name="rewarded_earn">ca-app-pub-3940256099942544/5224354917</string>

    <string name="app_name">GameFace</string>
    <string name="app_name_with_styling">Game<b>Face</b></string>
    <string name="slogan">Take the party with you.</string>

    <string name="brand_name_1">Game</string>
    <string name="brand_name_2">Face</string>

    <string name="friends_notification_ID">friendschannel</string>
    <string name="friends_notification_channel">Friends</string>
    <string name="friends_notification_description">Notifications related to your friends</string>

    <string name="calling_notification_ID">callschannel</string>
    <string name="calling_notification_channel">Calls</string>
    <string name="calling_notification_description">Calls: Alerts and badges</string>

    <!-- Start Screen -->
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="already_have_account">Already have an account? Login.</string>

    <!-- Sign Up Screen -->
    <string name="sign_up_title">Create an account</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="cpassword_input_hint">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="terms_and_conditions_text">By signing up, you accept our <u>Terms and Conditions</u> and <u>Privacy Policy</u></string>

    <!-- Login Screen -->
    <string name="login_title">Welcome.</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="dont_have_account">Don\'t have an account? <u>Sign Up</u></string>
    <string name="horizontal_line">or</string>
    <string name="terms_and_condition_login">By signing in, you accept our <u>Terms and Conditions</u> and <u>Privacy Policy</u></string>
    <string name="pwd_reset_email_sent">Password reset email sent to %1$s</string>

    <!-- Almost Done -->
    <string name="almost_done_title">Finish Setting Up Your Account</string>
    <string name="username_input_hint">Username</string>
    <string name="full_name_input_hint">Name</string>
    <string name="bio_input_hint">Bio</string>
    <string name="finish_signup">Finish Signup</string>
    <string name="username_exists">Username already exists!</string>
    <string name="username_no_spaces">Username cannot contain spaces</string>
    <string name="username_bad_phrase">Username contains a word or phrase that cannot be used</string>
    <string name="not_finished_setting_up">You have not finished signing up! Please log back in.</string>

    <!-- Bottom Nav View -->
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="bottom_nav_shop_title">Shop</string>

    <!-- Shop Fragment -->
    <string name="app_bar_search_title">Search</string>

    <!-- Profile Fragment -->
    <string name="no_friend_requests">No New Friend Requests</string>
    <string name="add_friends_button">Add Friends</string>
    <string name="no_friends">Add Friends to See Them Here!</string>
    <string name="done_button">Done</string>
    <string name="users_send_request">Send Request</string>
    <string name="users_request_sent">Request Sent</string>
    <string name="users_own_profile">You</string>
    <string name="users_friend_profile">Friend</string>

    <string name="accept_request">Accept</string>
    <string name="deny_request">Delete</string>
    <string name="btn_edit_profile">Edit Profile</string>

    <string name="change_pfp">Change Profile Photo</string>

    <!-- Crop Fragment -->
    <string name="crop_done_btn">Done</string>
    <string name="crop_cancel_btn">Cancel</string>
    <string name="crop_title">Profile Photo</string>

    <!-- Incoming Call -->
    <string name="incoming_call">It\'s Game Time!</string>
    <string name="incoming_video_call_from">Incoming Video Call From:</string>
    <string name="notification_title_call">Incoming Video Call</string>
    <string name="notification_missed_call">Missed Video Call</string>

    <!-- Error -->
    <string name="toast_playservices_unrecoverable">Google Play Services not Installed!</string>
    <string name="error_fetching_user">No user found! Please login</string>
    <string name="login_failed">Login Failed</string>
    <string name="enter_valid_email">Please enter a valid email!</string>
    <string name="pwd_reset_email_error">Error occurred. Email not sent</string>
    <string name="google_sign_in_failed">Google Sign in failed</string>
    <string name="username_length">Username must be at least 6 characters in length</string>
    <string name="pwd_length">Password must be at least 6 characters in length</string>
    <string name="pwd_must_match">Passwords must match</string>
    <string name="sign_up_failed">Sign Up Failed</string>
    <string name="cropping_failed">Cropping Failed. Please Try Again.</string>


    <string-array name="array_bad_words">
        <item>shit</item>
        <item>fuck</item>
        <item>asshole</item>
        <item>whore</item>
        <item>nigga</item>
        <item>nigger</item>
        <item>cunt</item>
        <item>bitch</item>
        <item>faggit</item>
        <item>faggot</item>
    </string-array>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save_btn">Save</string>
    <string name="cancel_profile_edit">Cancel</string>
    <string name="shop_charades_title">Charades</string>
    <string name="shop_truth_or_dare_title">Truth or Dare</string>
    <string name="shop_would_you_rather_title">Would You Rather</string>
    <string name="purchase_btn">Purchase</string>
    <string name="download_btn">Download</string>
    <string name="description_title">Description</string>
    <string name="free_price">Free</string>
    <string name="stats_friends_title">Friends</string>
    <string name="stats_packs_title">Packs</string>
    <string name="stats_games_won_title">Games Won</string>
    <string name="_0">0</string>
    <string name="call_ended">Call Ended</string>
    <string name="watch_ad">Watch Ad (+25)</string>
    <string name="home">Go to Home</string>


</resources>
