<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 - Magnitude Studios - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is prohibited
  ~ All software is proprietary and confidential
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shopLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/bold_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/shop_charades_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/charadesItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_pack" />

    <TextView
        style="@style/bold_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/shop_truth_or_dare_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tOrDItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_pack" />

    <TextView
        style="@style/bold_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/shop_would_you_rather_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wouldYouRatherItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_pack" />
</LinearLayout>