<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 -Srihari Vishnu - All Rights Reserved
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~ HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  ~ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF
  ~ OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_close_btn"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:background="@drawable/ic_close_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/signup_txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/startscreen_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name_1" />

        <TextView
            style="@style/startscreen_text_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name_2" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_guideline_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <LinearLayout
        android:id="@+id/signup_buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/signup_guideline_vertical_2"
        app:layout_constraintEnd_toEndOf="@id/signup_guideline_horizontal_2"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/signup_guideline_vertical">

        <TextView
            style="@style/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_huge"
            android:text="@string/sign_up_title" />

        <EditText
            android:id="@+id/signup_emailInput"
            style="@style/signup_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_large"
            android:autofillHints="email"
            android:drawableStart="@drawable/ic_mail"
            android:hint="@string/email_input_hint"
            android:importantForAutofill="auto"
            android:inputType="textEmailAddress" />

        <com.magnitudestudios.GameFace.views.CustomInputLayout
            android:id="@+id/signup_passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_large"
            style="@style/input_layout_pwd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_passwordInput"
                style="@style/signup_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password_input_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.magnitudestudios.GameFace.views.CustomInputLayout>

        <com.magnitudestudios.GameFace.views.CustomInputLayout
            android:id="@+id/signup_cPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_large"
            style="@style/input_layout_pwd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_cPasswordInput"
                style="@style/signup_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/cpassword_input_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.magnitudestudios.GameFace.views.CustomInputLayout>

    </LinearLayout>

    <com.magnitudestudios.GameFace.views.MorphableButton
        android:id="@+id/signup_button_signup"
        style="@style/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_medium"
        android:layout_marginTop="@dimen/layout_margin_huge"
        android:layout_marginEnd="@dimen/layout_margin_medium"
        android:text="@string/sign_up_button"
        app:layout_constraintEnd_toStartOf="@+id/signup_guideline_horizontal_2"
        app:layout_constraintStart_toStartOf="@+id/signup_guideline_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/signup_buttons_layout" />

    <TextView
        android:id="@+id/signup_txv_terms"
        android:textColorLink="@color/white"
        style="@style/terms_and_conditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_small"
        android:text="@string/terms_and_conditions_text"
        app:layout_constraintEnd_toStartOf="@+id/signup_guideline_horizontal_2"
        app:layout_constraintStart_toStartOf="@+id/signup_guideline_horizontal"
        app:layout_constraintTop_toBottomOf="@id/signup_button_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>