<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 - Magnitude Studios - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is prohibited
  ~ All software is proprietary and confidential
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_background"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <TextView
        android:id="@+id/textView"
        style="@style/signup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/almost_done_title"
        android:layout_marginTop="@dimen/layout_margin_huge"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profilePic"
        android:layout_width="@dimen/huge_icon_size"
        android:layout_height="@dimen/huge_icon_size"
        android:scaleType="centerCrop"
        android:background="#00000000"
        android:layout_marginTop="@dimen/layout_margin_large"
        android:src="@drawable/ic_add_profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/profilePic">

        <EditText
            android:id="@+id/signup_usernameInput"
            style="@style/signup_edittext"
            android:digits="abcdefghijklmnopqrstuvwxyz0123456789_-"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:autofillHints="username"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/username_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/full_nameInput"
            style="@style/signup_edittext"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:autofillHints="name"
            android:drawableStart="@drawable/ic_account_circle_48px"
            android:hint="@string/full_name_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/bio_input"
            style="@style/signup_bio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/layout_margin_large"
            android:layout_weight="1"
            android:autofillHints="name"
            android:gravity="start|top"
            android:hint="@string/bio_input_hint"
            android:inputType="textMultiLine"
            android:maxLength="300"/>
    </LinearLayout>

    <com.magnitudestudios.GameFace.views.MorphableButton
        android:id="@+id/btn_finish_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:text="@string/finish_signup"
        style="@style/signup_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>