<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 - Magnitude Studios - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is prohibited
  ~ All software is proprietary and confidential
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/md_blue_grey_900"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/call_ended"
        style="@style/large_text_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/call_ended"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/layout_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_margin_large"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_ended"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/members_names"
        style="@style/normal_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        tools:text="srihariv, matthewd" />

    <TextView
        android:id="@+id/earnedGamepoints"
        style="@style/large_text_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/members_names"
        tools:text="+100"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:drawablePadding="@dimen/padding_medium"
        app:drawableStartCompat="@drawable/stacked_gp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goHome"
        style="@style/primary_button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/home"
        android:layout_marginTop="@dimen/layout_margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/earnedGamepoints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/events"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/banner_after_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/layout_margin_medium"
            app:layout_constraintTop_toBottomOf="@+id/goHome" />

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/goToShop"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner_after_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/layout_margin_small"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_after_calling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>